--- a/First-Html-page/personal-site-challenge.html
+++ b/First-Html-page/personal-site-challenge.html
@@ -5,25 +5,63 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> Personal Site Challenge </title>
         <!-- Font Import -->
-        <!-- <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet"> -->
+        <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
         <!-- CSS Files -->
+        <link rel="stylesheet" href="site.css">
     </head>
     <body>
-        I'm a Dev Club Member.
-        a programmer 
-        Hello.
-        I am a Web Developer.And I ❤️ to code
-        My Skills.
-        Design & Development
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis illum autem harum molestiae necessitatibus impedit placeat, rem consectetur provident. Ex laudantium odit fugit quo aliquam corporis nulla quaerat quas incidunt?
-        Debugging
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis illum autem harum molestiae necessitatibus impedit placeat, rem consectetur provident. Ex laudantium odit fugit quo aliquam corporis nulla quaerat quas incidunt?
-        Get In Touch
-        If you love coding as much as I do.
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci consectetur quisquam deleniti, molestiae reiciendis atque hic blanditiis suscipit voluptates harum ducimus, rerum alias! Quos cum, sequi molestiae itaque id sunt!
-        LinkedIn
-        Twitter
-        Website
-        © DevClub
+        <div class="header_section">
+            <div class="header_background">
+                <img style="float: right;" class="first_cloud" src="asset/cloud.png">
+                <div style="clear: right">
+                    <h1>I'm a Dev Club Member</h1> 
+                    <h2> a programmer </h2>
+                 </div>
+                <img class="second_cloud" src="asset/cloud.png">
+            </div>
+        </div>
+        <div class="second_section">
+            <img class="programming_avatar center" src="asset/programmerAvatar.png">
+            <h2> Hello </h2>
+            <h4> I am a Web Developer.And I ❤️ to code</h4>
+        </div>
+        <div class="skills_section">
+            <h2> My Skills </h2>
+            <div class="skill_item grid_type_one" >
+                <img class="grid_image" src="asset/programmerAvatar.png">
+                <div>
+                    <h3> Design & Development </h3>
+                    <h5> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis illum autem harum molestiae necessitatibus impedit placeat, rem consectetur provident. Ex laudantium odit fugit quo aliquam corporis nulla quaerat quas incidunt?
+                        Debugging</h5>
+                </div>
+            </div>
+            <div class="skill_item grid_type_two" >
+                <div>
+                    <h3> Design & Development </h3>
+                    <h5> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis illum autem harum molestiae necessitatibus impedit placeat, rem consectetur provident. Ex laudantium odit fugit quo aliquam corporis nulla quaerat quas incidunt?
+                        Debugging</h5>
+                </div>
+                <img class="grid_image" src="asset/programmerAvatar.png">
+            </div>
+        </div>
+        <div class="contact_section center">
+            <div class="contact_content">
+                <h2> Get In Touch </h2>
+                <h3> If you love coding as much as I do. </h3>
+                <h5> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci consectetur quisquam deleniti, molestiae reiciendis atque hic blanditiis
+                        suscipit voluptates harum ducimus, rerum alias! Quos cum, sequi molestiae itaque id sunt!</h5>
+            </div>
+            <button class="contact_btn center">CONTACT ME</button>
+        </div>
+        <div class="footer_section">
+            <table> 
+                <tr> 
+                    <td><h5> LinkedIn </h5></td> 
+                    <td><h5> Twitter </h5></td> 
+                    <td><h5> Website </h5></td> 
+                </tr> 
+            </table> 
+            <h6> ©DevClub </h6>
+        </div>
     </body>
 </html>
